--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -16,4 +16,4 @@
 
     <% end %>
   </table>
-<p class="boardTopBottom file-indicator text-center col-xs-12">a b c d e f g h</p>
+<p class="boardTopBottom rank-and-file file-indicator text-center col-xs-12">a b c d e f g h</p>
