--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -32,3 +32,29 @@
     dragDrop();
   <% end %>
 </script>
+
+<!-- Enable automatic update of board when opponent moves -->
+<script type="text/javascript" charset="utf-8">
+  $(function() {
+    var pusher = new Pusher('<%= ENV['PUSHER_KEY'] %>');
+    var channel = pusher.subscribe('game-<%= @game.id %>');
+
+    // Some useful debug msgs
+    pusher.connection.bind('connecting', function() {
+      console.log('Connecting to Pusher...');
+    });
+    pusher.connection.bind('connected', function() {
+      console.log('Connected to Pusher!');
+    });
+    pusher.connection.bind('failed', function() {
+      console.log('Connection to Pusher failed :(');
+    });
+    channel.bind('subscription_error', function(status) {
+      console.log('Pusher subscription_error');
+    });
+
+    channel.bind('move_made', function(data) {
+      window.location.reload(true);
+    });
+  });
+</script>
