--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Pusher: allows for automatic updates -->
-  <script src="http://js.pusher.com/3.1/pusher.min.js"></script>
+  <script src="https://js.pusher.com/3.1/pusher.min.js"></script>
 </head>
 <body>
 
