--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -36,3 +36,29 @@
     dragDrop();
   <% end %>
 </script>
+
+<script type="text/javascript" charset="utf-8">
+      $(function() {
+        // If your Heroku application is within the EU region,
+        // uncomment the following lines
+        // Pusher.host = 'ws-eu.pusher.com';
+        // Pusher.sockjs_host = 'sockjs-eu.pusher.com';
+
+        var pusher = new Pusher('7999a06c531a57919212'); // Replace with your app key
+        var channel = pusher.subscribe('private-'+<%= current_user.id %>);
+
+        // Some useful debug msgs
+        pusher.connection.bind('connecting', function() {
+          console.log('Connecting to Pusher...');
+        });
+        pusher.connection.bind('connected', function() {
+          console.log('Connected to Pusher!');
+        });
+        pusher.connection.bind('failed', function() {
+          console.log('Connection to Pusher failed :(');
+        });
+        channel.bind('subscription_error', function(status) {
+          console.log('Pusher subscription_error');
+        });
+      });
+    </script>
