--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -44,7 +44,7 @@
         // Pusher.host = 'ws-eu.pusher.com';
         // Pusher.sockjs_host = 'sockjs-eu.pusher.com';
 
-        var pusher = new Pusher('7999a06c531a57919212'); // Replace with your app key
+        var pusher = new Pusher('pusher_key'); // Replace with your app key
         var channel = pusher.subscribe('private-'+<%= current_user.id %>);
 
         // Some useful debug msgs
