Fix bug for blushing-king
* Adjust game.css.scss and fix the glow effect for a king in check
on smaller display sizes.
* Remove the call to gameStartMessage on games#show page.

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -231,6 +231,7 @@ $kingInCheckMessage-iphone5: .8em;
 
 .blushing-king {
   background: url('/assets/red_king.png');
+  background-size: contain;
 }
 
 .white-player-turn {
