--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -7,32 +7,34 @@
 </h2>
 
 <div class="player-turn text-center"></div>
-
-<div class="container table-surface">
-  <div class="black-or-white-coords">
-    <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-xs-10 col-xs-offset-1" data-no-turbolink>
-      <!-- pull in the board from a partial -->
-      <%= render 'chess_board' %>
+<% if (@game.white_player_concede == false && @game.black_player_concede == false) && (@game.white_player_draw == false && @game.black_player_draw == false)  %> 
+  <div class="container table-surface">
+    <div class="black-or-white-coords">
+      <div class="board-booyah-box col-lg-6 col-lg-offset-3 col-xs-10 col-xs-offset-1" data-no-turbolink>
+        <!-- pull in the board from a partial -->
+        <%= render 'chess_board' %>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="container">
-  <% if @game.black_player_id.nil? && @game.white_player_id != current_user.id %>
-    <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
-  <% end %>
-</div>
+  <div class="container">
+    <% if @game.black_player_id.nil? && @game.white_player_id != current_user.id %>
+      <%= link_to "Join", game_path(@game), method: :patch, class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+  <br />
+  <br />
+  <div class="container">
+    <%= link_to "Concede the Game", {action: "concede", controller: "games"}, method: :patch, class: 'btn btn-primary' %>
+  </div>
+  <br />
+  <div class="container">
+    <%= link_to "Suggest draw", {action: "draw", controller: "games"}, method: :patch, class: 'btn btn-primary' %>
+  </div>
+<% else %>
+  <h3 class="text-center">The game was conceded by <%= @conceding_player %>. </h3>
+<% end %>
 
-<div class="container">
-  <%= link_to "Concede the Game", {action: "concede", controller: "games"}, method: :patch, class: 'btn btn-primary' %>
-</div>
-
-<br />
-white_player_concede: <%= @game.white_player_concede %>
-<br />
-black_player_concede: <%= @game.black_player_concede %>
-
-<br />
 
 <!-- Execute the script that allows moving pieces on the board. -->
 <script>
@@ -50,7 +52,7 @@ black_player_concede: <%= @game.black_player_concede %>
         // Pusher.sockjs_host = 'sockjs-eu.pusher.com';
 
         var pusher = new Pusher('<%= ENV["pusher_key"] %>'); // Replace with your app key
-        var channel = pusher.subscribe('private-'+<%= current_user.id %>);
+        var channel = pusher.subscribe('game-<%= @game.id %>');
 
         // Some useful debug msgs
         pusher.connection.bind('connecting', function() {
@@ -62,8 +64,10 @@ black_player_concede: <%= @game.black_player_concede %>
         pusher.connection.bind('failed', function() {
           console.log('Connection to Pusher failed :(');
         });
-        channel.bind('subscription_error', function(status) {
-          console.log('Pusher subscription_error');
+       channel.bind('game_conceded', function(data) {
+      //window.location.reload(false);
+      //if ( data.dest_x !== data.orig_x || data.orig_y !== data.dest_y ) {
+        location.reload();
         });
       });
     </script>
